# timesheet-writer

./: .gitignore  README.md  commands  pyproject.toml  sheet_shortcuts.json
docs/: _quarto.yml  index.qmd
docs/api/: sheet-client.qmd
docs/guides/: getting-started.qmd
docs/reference/: best-practices.qmd
src/gsheet_tui/: auth.py  main.py  sheet_client.py
src/gsheet_tui/tui/: app.py
